--- a/guidelinesWP/02-chap2.Rmd
+++ b/guidelinesWP/02-chap2.Rmd
@@ -20,14 +20,14 @@ Here we outline principles for developing LRPs for Pacific salmon, adapted from 
 
 
 
-**Principle 1**. LRPs should be selected based on the best available information for the SMU, including evidence of serious harm, knowledge of underlying biological processes, traditional knowledge of the SMU, and comparison with similar SMU (Marentette et al. In prep.). Criteria for evaluating best scientific information developed for US National Standards may be applicable here for identifying best available information for LRPs [@USCodeFederal2021]. These criteria are: relevance, inclusiveness, objectivity, transparency and openness, timeliness, verification and validation, and peer review.  In addition, scientific information should include an evaluation of uncertainties and identify gaps in our understanding or information. When uncertainty exists in which LRP estimation method is most appropriate or from various assumptions within a single LRP, these uncertainties should be acknowledged and considered when providing LRP recommendations. Where the weight-of-evidence supports a set of assumptions or hypotheses associated with one LRP, then this LRP can be recommended. Where evidence is inconclusive, this uncertainty should be integrated into the estimation of status and clearly communicated.
+**Principle 1**. LRPs should be selected based on the best available information for the SMU, including evidence of serious harm, knowledge of underlying biological processes, traditional knowledge of the SMU, and comparison with similar SMU (Marentette et al. In prep.). Criteria for evaluating best scientific information developed for US National Standards may be applicable here for identifying best available information for LRPs [@USCodeFederal2021]. These criteria are: relevance, inclusiveness, objectivity, transparency and openness, timeliness, verification and validation, and peer review.  In addition, scientific information should include an evaluation of uncertainties and identify gaps in our understanding or information. When uncertainty exists in which LRP estimation method is most appropriate or from various assumptions within a single LRP, these uncertainties should be acknowledged and considered when providing LRP recommendations. Where the weight-of-evidence supports a set of assumptions or hypotheses associated with one LRP, then this LRP can be recommended. Where evidence is inconclusive, this uncertainty should be integrated into the estimation of status and the uncertainties should clearly communicated.
 
-Within this principle, it is recognized that science is not static and new findings continually advance our understanding of best available information. In particular, peer-review is necessary to ensure that the quality and credibility of data and methods for LRP development meet the standards of the scientific community. When determining whether to conduct a peer review, the level of novelty and complexity, and any previous peer-reviewed stock assessments should be considered. Although routine updates may not need formal peer review, new LRPs or the application of benchmarks and LRPs to new CUs and SMUs assessments may require peer review.  
+Within this principle, it is recognized that science is not static and new findings continually advance our understanding of best available information. In particular, peer-review is necessary to ensure that the quality and credibility of data and methods for LRP development meet the standards of the scientific community. When determining whether to conduct a peer review, the level of novelty and complexity, and any previous peer-reviewed stock assessments, should be considered. Although routine updates may not need formal peer review, new LRPs or the application of benchmarks and LRPs to new CUs and SMUs assessments may require peer review.  
 
-Similarly, best practices, or practices that have been demonstrated to work well can be used to inform reference points, as defined by @sainsburyBestPracticeReference2008. The ‘best practice’ concept is based on the best practice that has been demonstrated through use, and recognizes that views of what is ‘best’ will continuously improve with experience. Best practice is not an absolute or fixed entity, or a guarantee of adequacy. It is based on experience to date and it is expected to evolve over time" [@sainsburyBestPracticeReference2008].
+Similarly, best practices, or practices that have been demonstrated to work well, can be used to inform reference points, as defined by @sainsburyBestPracticeReference2008. The ‘best practice’ concept is based on the best practice that has been demonstrated through use, and recognizes that views of what is ‘best’ will continuously improve with experience. Best practice is not an absolute or fixed entity, or a guarantee of adequacy. It is based on experience to date and it is expected to evolve over time" [@sainsburyBestPracticeReference2008].
 
 
-**Principle 2**. LRPs should be consistent with the goal of avoiding serious harm to the SMU, as described in @dfoFisheryDecisionMakingFramework2009 and Section \@ref(intro). The LRP should be set above where serious harm occurs and should avoid long-term losses that may accompany such undesirable states, such as those associated with fishing and ecosystem components, e.g., supporting dependent predators [@dfoFisheryDecisionMakingFramework2009; @dfoPolicyNewFisheries2009]. In addition, LRPs should be representative of the entire SMU, including scenarios where components of the SMU (e.g., CUs) are thought to represent the SMU (Section \@ref(guidelines)). <!--CH: I have added this last sentence to align with Marentette et al. principle 2, below. However, it does sound a little awkward here.-->
+**Principle 2**. LRPs should be consistent with the goal of avoiding serious harm to the SMU, as described in @dfoFisheryDecisionMakingFramework2009 and Section \@ref(intro). The LRP should be set above the level where serious harm occurs and should avoid long-term losses that may accompany such undesirable states, such as those to fishing and ecosystem components, e.g., dependent predators [@dfoFisheryDecisionMakingFramework2009; @dfoPolicyNewFisheries2009]. In addition, LRPs should be representative of the entire SMU, including scenarios where components of the SMU (e.g., CUs) are thought to represent the SMU (Section \@ref(guidelines)). <!--CH: I have added this last sentence to align with Marentette et al. principle 2, below. However, it does sound a little awkward here.-->
 
 <!--Marentette et al Principle 2:
 2.1	Indicators and LRPs should be at minimum conceptually linked to one or more interpretations of serious harm such as impaired recruitment, productivity, resilience or ability to recover from perturbation.  
@@ -95,7 +95,7 @@ Principle 5: When selecting from multiple alternatives, the choice of stock stat
 -->
 
 
-**Principle 6**.  In addition to principles derived for marine species in general (Principles 1-5) and to meet the goals of DFO's Precautionary Approach Policy (Principle 2), Pacific salmon LRPs should be consistent with the goals and objectives of the WSP. The WSP framework requires both the definition of biological units and an assessment of their status along biological metrics, with lower benchmarks used to represent the level of a metric that avoids risk of extinction. This approach is consistent with avoiding serious harm to the CU. Above the lower benchmarks (above Red status), irreversible or slowly reversible impacts are avoided.  Ignoring CU-level status by focusing solely on SMU-level status can result in serial depletion (or loss) of weak component CUs within an SMU, resulting in a possibly misleading indication of serious harm and status. Therefore, to be consistent with the WSP, LRPs should consider status of component CUs.
+**Principle 6**.  In addition to principles derived for marine species in general (Principles 1-5) and to meet the goals of DFO's Precautionary Approach Policy (Principle 2), Pacific salmon LRPs should be consistent with the goals and objectives of the WSP. The WSP requires both the definition of biological units and an assessment of their status along biological metrics, with lower benchmarks used to represent the level of a metric that avoids risk of extinction. This approach is consistent with avoiding serious harm to the CU. Above the lower benchmarks (above Red status), irreversible or slowly reversible impacts are avoided.  Ignoring CU-level status by focusing solely on SMU-level status can result in serial depletion (or loss) of weak component CUs within an SMU, resulting in a possibly misleading indication of serious harm and status. Therefore, to be consistent with the WSP, LRPs should consider status of component CUs.
 
 <!--CH: the following 2 lines give a line break before the next heading-->
 \
@@ -104,7 +104,7 @@ Principle 5: When selecting from multiple alternatives, the choice of stock stat
 
 Our goal is to provide overall guidelines on LRP development following the principles listed above while providing flexibility due to differences in biological characteristics and data types, qualities and quantities among Pacific salmon species and SMUs. We demonstrate the extent to which candidate LRP methods proposed here are aligned with these principles. Alternative LRP methods, aligned with these key principles, may be developed in the future to capture a broader range of data availability, quality, and types, and/or dimensions of biological status.
 
-In the next section, methods for estimating CU status are described, as implemented in previous status assessments under the WSP. Candidate LRPs that integrate CU statuses are then proposed, falling into two categories: those based on the proportion of component CUs above the Red zone called proportional LRPs, and those based on aggregate abundances, called aggregate abundance LRPs.  A more detailed description of LRPs with technical details is included in Holt et al. (In review). Guidelines on how to choose among LRPs is described in Section \@ref(guidelines). 
+In the next section, methods for estimating CU status are described, as implemented in previous status assessments under the WSP. Candidate LRPs that integrate CU statuses are then proposed, and fall into two categories: those based on the proportion of component CUs above the Red zone called proportional LRPs, and those based on aggregate abundances, called aggregate abundance LRPs.  A more detailed description of LRPs is included in Holt et al. (In review). Guidelines on how to choose among LRPs is described in Section \@ref(guidelines). 
 
 
 
