--- a/guidelinesWP/06-chap6.Rmd
+++ b/guidelinesWP/06-chap6.Rmd
@@ -13,7 +13,7 @@
 \end{itemize}
 \item Uncertainties can also arise in  \textbf{CU statuses}  due to the choice of metrics used (single or multidimensional) and their spatial scale (CU or finer, sub-populations). For both aggregate abundance LRPs, uncertainties can arise because CU-level status is based on only a single metric as a proxy for status on multiple dimensions as implemented in the Salmon Scanner. 
 \item The distribution of spawning among sub-populations within a CU can be important for the viability of the CU and SMU, and ignoring or misidentifying this stock structure may increase uncertainty in assessed status
-\item Uncertainties in all LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are poorly represented by data-rich CUs that are included. We recommend caution when applying provisional LRPs that do not include all CUs.
+\item Uncertainties in all LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are poorly represented by the data-rich CUs that are included. We recommend caution when applying provisional LRPs that do not include all CUs.
 \item Uncertainties in \textbf{logistic regression LRPs} arise from statistical estimation of the stock-recruitment and logistic models, as well as changes in the population parameters and covariance among CUs over time.
 \item For \textbf{projection LRPs}, uncertainties in underlying parameters and CU-level benchmarks are integrated into the probability of all CUs being above their lower benchmarks, and the LRP itself does not have statistical estimation uncertainty. Projection LRPs explicitly account for underlying uncertainties in population parameters, such as CU-level productivity and capacity, age-structure, covariance in recruitment deviations, and variability in implementation of exploitation strategies over time and among CUs. 
 \end{itemize}
@@ -23,7 +23,7 @@
 
 Uncertainties in CU-level benchmarks affect both proportional and aggregate abundance LRPs, and arise because of observation errors in underlying data, estimation uncertainty in benchmarks, and structural uncertainties in model forms. Each of these three sources of uncertainty in benchmarks are described here. 
 
-First, observations errors in spawner abundances, the proportion of hatchery-origin spawners, catches, stock assignment of catches, and ages-at-maturity can result in data uncertainties, which may impact estimates of recruitment in 'run reconstructions' and assessment of status. In particular, the impact of hatcheries on spawner and recruitment time-series is a key uncertainty due to the low rates of marking among hatcheries and sampling on the spawning grounds. Even when data on the proportion of hatchery-origin fish are available and abundance time-series are adjusted to account for these (as in the Interior Fraser River Coho case study), the genetic impacts of hatcheries can perpetuate over multiple generations [@arakiCarryoverEffectCaptive2009; @christieReproductiveSuccessEarlygeneration2014], but are difficult to quantify because second generation hatchery-origin fish are not marked or monitored. This is a source of uncertainty for populations impacted by within-basin hatchery facilities and those impacted by straying out-of-basin. Targeted marking and monitoring of spawning grounds for mark proportions and genetic analyses to identify genetic introgression from strays would help address these uncertainties.  Further, for stocks that are not dominated by hatchery production, the decision to exclude the contribution of hatchery-origin fish from time-series of spawner abundances where possible assumes that these fish do not contribute to assessment and resulting management of wild salmon, as in previous WSP assessments [e.g., @dfoWildSalmonPolicy2015], despite their possible contribution to conservation and rebuilding objectives, and ecosystem services in general. A review and evaluation of objectives for integrated-transition and integrated-wild populations (with PNI  $\geqslant$ 0.5), and the appropriate data on which to base assessments was beyond the scope of this project. 
+First, observations errors in spawner abundances, the proportion of hatchery-origin spawners, catches, stock assignment of catches, and ages-at-maturity can result in data uncertainties, which may impact estimates of recruitment in 'run reconstructions' and assessment of status. In particular, the impact of hatcheries on spawner and recruitment time-series is a key uncertainty due to the low rates of marking hatchery salmon and sampling on the spawning grounds. Even when data on the proportion of hatchery-origin fish are available and abundance time-series are adjusted to account for these (as in the Interior Fraser River Coho case study), the genetic impacts of hatcheries can perpetuate over multiple generations [@arakiCarryoverEffectCaptive2009; @christieReproductiveSuccessEarlygeneration2014], but are difficult to quantify because second generation hatchery-origin fish are not marked or monitored. This is a source of uncertainty for populations impacted by within-basin hatchery facilities and those impacted by straying out-of-basin. Targeted marking and monitoring of spawning grounds for mark proportions and genetic analyses to identify genetic introgression from strays would help address these uncertainties.  Further, for stocks that are not dominated by hatchery production, the decision to exclude the contribution of hatchery-origin fish from time-series of spawner abundances where possible assumes that these fish do not contribute to assessment and resulting management of wild salmon, as in previous WSP assessments [e.g., @dfoWildSalmonPolicy2015], despite their possible contribution to conservation and rebuilding objectives, and ecosystem services in general. A review and evaluation of objectives for integrated-transition and integrated-wild populations (with PNI  $\geqslant$ 0.5), and the appropriate data on which to base assessments was beyond the scope of this project. 
 
 
 
@@ -32,7 +32,7 @@ Second, in the estimation of benchmarks, statistical uncertainties can be repres
 
 
 
-Third, structural uncertainty in stock-recruitment models underlying benchmark estimation can swamp other sources of uncertainty, and requires careful consideration based on available data and biological understanding of the population dynamics, ideally with peer review.  We provide one example of structural uncertainty in the Interior Fraser River Coho study based on prior assumptions about population capacity, but other components, such as decisions about depensation at low abundances, shared or independent variability in productivity among CUs, and Beverton-Holt versus Ricker forms should be considered.  
+Third, structural uncertainty in stock-recruitment models underlying benchmark estimation can swamp other sources of uncertainty, and requires careful consideration based on available data and biological understanding of the population dynamics, ideally with peer review.  We provide one example of structural uncertainty in the Interior Fraser River Coho study based on prior assumptions about population capacity, but other components, such as decisions about depensation at low abundances, shared or independent variability in productivity among CUs, and strength of over-compensation (e.g., Rickver versus Beverton-Holt) should be considered.  
 
 
 <!--CH removed: Both structural and parameter uncertainties in run reconstructions may also impact CU assessments. However, @peacockEvaluatingConsequencesCommon2020 found that CU statuses were generally robust to most common assumptions in run reconstructions but that overestimating catch tended to increase rates of status misclassification. -->
@@ -49,7 +49,7 @@ Uncertainties in peer-reviewed WSP assessments are captured qualitatively throug
 
 ### Proportional LRPs
 
-Uncertainties in status derived from proportional LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are poorly represented by data-rich CUs that are included. To clearly communicate this uncertainty, we suggest labeling these LRPs as provisional when at all data-rich CUs have status above Red. Even when data-limited CUs have similar threats, environmental conditions and drivers, life-history characteristics and capacities as data-rich CUs, population dynamics may diverge due to other random variables and demographics. We recommend caution when applying provisional LRPs that do not include all CUs. In these cases, we recommend implementing a monitoring program to inform CU-specific assessments.
+Uncertainties in status derived from proportional LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are poorly represented by the data-rich CUs that are included. To clearly communicate this uncertainty, we suggest labeling these LRPs as provisional when all the data-rich CUs have status above Red. Even when data-limited CUs have similar threats, environmental conditions and drivers, life-history characteristics and capacities as the data-rich CUs, population dynamics may diverge due to other unaccounted for processes. We recommend caution when applying provisional LRPs that do not include all CUs. In these cases, we recommend implementing a monitoring program to inform CU-specific assessments.
 
 
 ### Aggregate Abundance LRPs
@@ -59,7 +59,7 @@ Uncertainties in status derived from proportional LRPs can arise from the exclus
 For logistic regression LRPs, uncertainties can arise from statistical estimation of the stock-recruitment and logistic models. We provide 95% CIs and assess their overlap with current status. These CIs represent uncertainty in the estimation of the logistic regression incorporating uncertainty in the underlying benchmarks (e.g., from spawner-recruitment relationships or the watershed-area model). When estimated in a Bayesian framework, the probability distribution of LRPs can be generated to provide the probability that the current status is above the LRP given uncertainties in the LRP. In future analyses, uncertainty in current spawner abundances could be integrated with uncertainty to derive probabilities of breaching LRPs that accounts for both. 
 The estimation of the logistic regression model can be statistically integrated with the estimation of the underlying spawner-recruitment based benchmarks. This statistical integration allow uncertainties to be propagated from CU-level benchmarks to SMU-level LRPs.
 
-Similar to proportional LRPs, uncertainties in logistic regression LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are not well represented by data-rich CUs that are included. Further uncertainties in logistic regression LRPs can arise if the management system has changed over time such that selectivity among CUs has diverged, or if the covariance in population dynamics has changed due to other natural or anthropogenic factors. In some cases, covariance among CUs may be driven by synchronous trends in hatchery enhancement creating misleading and possibly biased LRP estimates.<!--CH omit: such that the relationship between aggregate abundances and CU statuses has changed-->  
+Similar to proportional LRPs, uncertainties in logistic regression LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are not well represented by the data-rich CUs that are included. Further uncertainties in logistic regression LRPs can arise if the management system has changed over time such that selectivity from fisheries among CUs has diverged, or if the covariance in population dynamics has changed due to other natural or anthropogenic factors. In some cases, covariance among CUs may be driven by synchronous trends in hatchery enhancement creating misleading and possibly biased LRP estimates.<!--CH omit: such that the relationship between aggregate abundances and CU statuses has changed-->  
 
 Furthermore, uncertainties in both aggregate abundances LRPs (logistic regression and projection LRPs) can arise because these LRPs are derived CU status on a single metric as a proxy for status on multiple dimensions. In some cases, these statuses may diverge because  of additional metrics considered and the generational smoothed time-series used to assess current status in the multidimensional approach (as implemented by the Salmon Scanner). Further details are described in Section \@ref(guidelines). 
 
@@ -76,7 +76,7 @@ When considering logistic regression based LRPs under alternative model assumpti
 **Projection LRPs**
 
 Projection LRPs explicitly account for underlying uncertainties in population and harvest parameters, such as CU-level productivity and capacity, age-structure, covariance in recruitment deviations, and variability in implementation of exploitation strategies over time and among CUs. The inclusion of structural uncertainty in the form of the stock-recruitment relationship is demonstrated for the case study on Interior Fraser Coho. We recommend a thorough review of assumptions and either including them directly in random sampling in projections or including them as sensitivity analyses.
-One caveat of this approach is that the LRP depends on the management procedure applied in the projections, implemented as a constant exploitation strategy for our case studies. Although management procedures for Pacific salmon often include escapement goals, fixed exploitation limits, and/or a fixed set of exploitation rates that vary with abundances, in practice salmon are managed through regulations on effort or exploitation rate and not allowable catches, and emergent time-series of exploitation can be approximated with constant exploitation rate with implementation error. Other more realistic management procedures could be considered in future iterations.  Projection LRPs derived in this way cannot be used to assess status when management procedures change. 
+One caveat of this approach is that the LRP depends on the management procedure applied in the projections, implemented as a constant exploitation strategy for our case studies. Although management procedures for Pacific salmon often include escapement goals, fixed exploitation limits, and/or a fixed set of exploitation rates that vary with abundances, in practice salmon are managed through regulations on effort or exploitation rate and not allowable catches, and emergent time-series of exploitation can be approximated with constant exploitation rate with implementation error. Other more realistic management procedures could be considered in future iterations.  Projection LRPs derived in this way cannot be used to assess status when management procedures change over time. 
 
 
 One difference between projection and logistic regression LRPs is that for projection LRPs, uncertainties in all underlying parameters and CU-level benchmarks are integrated into the probability of all CUs being above their lower benchmarks, so that the LRP itself does not have statistical uncertainty associated with it. In contrast, 95% CIs associated with logistic regression LRPs account for estimation uncertainty not included in projection LRPs. 
@@ -87,18 +87,18 @@ One difference between projection and logistic regression LRPs is that for proje
 \begin{tcolorbox}[sharp corners, boxrule=0.2mm]
 \subsection*{Key Points:}
 \begin{itemize} 
-\item For \textbf{proportional LRPs},  we recommend SMU status be either provisional or data deficient when an SMU contains data-deficient CUs and remaining data-rich CUs are above Red Status, due to possible positive biases in status based on data-rich CUs alone. An SMU status is provisional when data-rich CUs are deemed representative of data-deficient CUs, and data-deficient when they are not.
-\item In contrast, if any component CU has Red status, the LRP of 100% CUs above the Red status is considered breached regardless of the presence of data-deficient of CUs how representative they are of data-riCh CUs.
-\item For \textbf{aggregate abundance LRPs} we recommend that SMU status be provisional when SMUs contain data-deficient CUs that can be represented by data-rich CUs regardless of the status of data-rich CUs.
+\item For \textbf{proportional LRPs},  we recommend SMU status be either provisional or data deficient when an SMU contains data-deficient CUs and the remaining data-rich CUs are above Red Status, due to possible positive biases in status based on the data-rich CUs alone. An SMU status is provisional when data-rich CUs are deemed representative of data-deficient CUs, and data-deficient when they are not.
+\item In contrast, if any component CU has Red status, the LRP of 100% CUs above the Red status is considered breached regardless of the presence of data-deficient of CUs and whether those status data-deficient CUs can be inferred from the data-rich CUs that are included.
+\item For \textbf{aggregate abundance LRPs} we recommend that SMU status be provisional when SMUs contain data-deficient CUs that can be represented by the data-rich CUs that are included, regardless of the status of those data-rich CUs.
 \end{itemize}
 \end{tcolorbox}
 
-For proportional LRPs,  we recommend SMU status be either provisional or data deficient when an SMU contains data-deficient CUs and remaining data-rich CUs are above Red Status, due to possible positive biases in status based on data-rich CUs alone.  Provisional status can be assigned to SMUs where data-rich CUS are representative of data-deficient CUs, and data-deficient SMU status can be assigned where data-rich CUs are not representative (Table \@ref(tab:GuidanceDDCUs)). In these cases, the inclusion of additional CUs may deplete status to below the LRP or keep status at 100% of CUs above the Red zone, but cannot improve status to above 100%. The power to detect a breach of a proportional LRP is relatively weak when the sample size of data-rich CUs is small relative to the total number of component CUs. Therefore, statuses that rely on only a small number of CUs within an SMU tend to provide more optimistic status than those that include a larger sample of CUs for proportional LRPs, as shown for Inside South Coast Chum case study. 
+For proportional LRPs,  we recommend SMU status be either provisional or data deficient when an SMU contains data-deficient CUs and the remaining data-rich CUs are above Red Status, due to possible positive biases in status based on the data-rich CUs alone.  Provisional status can be assigned to SMUs where the data-rich CUS are representative of data-deficient CUs, and data-deficient SMU status can be assigned where the data-rich CUs are not representative (Table \@ref(tab:GuidanceDDCUs)). In these cases, the inclusion of additional CUs as data become available, may further deplete or increase status below the LRP, but will not change the fact that the LRP has been breached. The power to detect a breach of a proportional LRP is relatively weak when the sample size of the data-rich CUs is small relative to the total number of component CUs. Therefore, statuses that rely on only a small number of CUs within an SMU tend to provide more optimistic status than those that include a larger sample of CUs for proportional LRPs, as shown for Inside South Coast Chum case study. 
 
 In contrast, if the LRP of 100% of CUs above Red status has been breached for an SMU with data-deficient CUs, the inclusion of additional CUs may further deplete or improve status defined as the percentage of CUs above Red status, but will not increase status to above the LRP of 100%. This scenario reflects higher certainty in status. This asymmetrical impact of increased monitoring of CUs on SMU status may reduce incentives to extend monitoring to data-deficient CUs.
 
 
-For aggregate abundance LRPs we recommend that SMU status be provisional when SMUs contain data-deficient CUs that can be represented by data-rich CUs regardless of the status of data-rich CUs. For these LRPs, we found that removing component CUs from assessment of an SMU tended to increase variability in SMU-level status, which may be more pessimistic or optimistic than when all CUs are considered depending on which CU is removed and the level of covariation among CUs.  For logistic regression LRPs in particular, the removal of CUs affects the fit of the logistic regression model, which impacts estimated status relative to LRPs in ways that are difficult to predict *a priori*, as shown for the Interior Fraser Coho case study. In addition, for aggregate abundance LRPs we recommend data-deficient status for SMUs with component data-deficient CUs that cannot be represented by data-rich CUs. 
+For aggregate abundance LRPs we recommend that SMU status be provisional when SMUs contain data-deficient CUs that can be represented by data-rich CUs regardless of the status of the data-rich CUs. For these LRPs, we found that removing component CUs from assessment of an SMU tended to increase variability in SMU-level status, which may be more pessimistic or optimistic than when all CUs are considered depending on which CU is removed and the level of covariation among CUs.  For logistic regression LRPs in particular, the removal of CUs affects the fit of the logistic regression model, which impacts estimated status relative to LRPs in ways that are difficult to predict *a priori*, as shown for the Interior Fraser Coho case study. In addition, for aggregate abundance LRPs we recommend data-deficient status for SMUs with component data-deficient CUs that cannot be represented by the data-rich CUs. 
 
 
 
@@ -109,9 +109,9 @@ For aggregate abundance LRPs we recommend that SMU status be provisional when SM
 \begin{itemize} 
 \item We recommend future research be prioritized to evaluate the impacts of:
 \begin{itemize} 
-\item temporal trends in underlying population parameters such as productivity on biological benchmarks and reference points 
-\item adapting LRPs to include a broader scope for serious harm, including ecosystem and habitat considerations and traditional knowledge
-\item simulation evaluation of LRP methods given temporal variability in population parameters and other sources of uncertainty
+\item Temporal trends in underlying population processes such as intrinsic productivity and carrying capacity on biological benchmarks and reference points 
+\item Adapting LRPs to include a broader scope for serious harm, including ecosystem and habitat considerations and traditional knowledge
+\item Simulation evaluation of LRP methods given temporal variability in population parameters and other sources of uncertainty
 \end{itemize}
 \end{itemize}
 \end{tcolorbox}
@@ -120,16 +120,15 @@ We recommend future research on the impacts of temporal trends in underlying pop
 
 ### TIME-VARYING PARAMETERS AND IMPACTS ON LRPS
 
-There is increasing evidence of time varying parameters in Pacific salmon populations, particularly relating to trends in productivity [@dornerSpatialTemporalPatterns2018; @malickRegionalScaleDeclinesProductivity2016; @petermanWidespreadDecreaseProductivity2012]. In Canada, DFO assessments identified declines in productivity for various CUs, e.g., Fraser River Sockeye [@grantEvaluationUncertaintyFraser2011; @grantIntegratedBiologicalStatus2013; @huangRecoveryPotentialAssessment2021], Southern BC Chinook [@dfoIntegratedBiologicalStatus2016], and Interior Fraser River Coho [@arbeiderInteriorFraserCoho2020]. These assessments relied on a variety of tools to identify trends in productivity including the evaluation of trends in recruits per spawner [@arbeiderInteriorFraserCoho2020], evaluation of trends in residuals from recruitment curve fits [@grantEvaluationUncertaintyFraser2011], and explicit consideration of time-varying parameters when fitting recruitment curves using Kalman filter or recursive Bayes approaches [@huangRecoveryPotentialAssessment2021]. 
+There is increasing evidence of time-varying population processes in Pacific salmon populations, particularly relating to trends in productivity [@dornerSpatialTemporalPatterns2018; @malickRegionalScaleDeclinesProductivity2016; @petermanWidespreadDecreaseProductivity2012]. In Canada, DFO assessments have identified declines in productivity for various CUs, e.g., Fraser River Sockeye [@grantEvaluationUncertaintyFraser2011; @grantIntegratedBiologicalStatus2013; @huangRecoveryPotentialAssessment2021], Southern BC Chinook [@dfoIntegratedBiologicalStatus2016], and Interior Fraser River Coho [@arbeiderInteriorFraserCoho2020]. These assessments relied on a variety of tools to identify trends in productivity including the evaluation of trends in recruits per spawner [@arbeiderInteriorFraserCoho2020], evaluation of trends in residuals from recruitment curve fits [@grantEvaluationUncertaintyFraser2011], and explicit consideration of time-varying parameters when fitting recruitment curves using Kalman filter or recursive Bayes approaches [@huangRecoveryPotentialAssessment2021]. 
 
-Time-varying recruitment parameters affect estimates for salmon benchmarks [e.g., S~MSY~ and S~gen~, @holtImpactTimevaryingProductivity2020] and are also likely to affect population trends, resulting in changes to benchmarks based on historical observations [e.g., percentile-based benchmarks, @holtEvaluatingBenchmarksBiological2018]. Analytical methods for time-varying reference points have been proposed for other marine fish species [@amarEvaluationTwoManagement2009; @puntFisheriesManagementClimate2014], some of which have been evaluated empirically and in simulation with mixed results [@olearyComparisonMultipleApproaches2020; @bergerCharacterTemporalVariability2019]. However, determining support for time-varying parameters is not always straightforward. Common statistical diagnosis such as inspection of residuals and use of information criteria (e.g., AIC and BIC) often produce conflicting results [@holtImpactTimevaryingProductivity2020].  @bergerCharacterTemporalVariability2019 suggests that dynamic reference points that track changes in underlying population processes are most useful in situations when stock productivity shifts directionally and the productivity signal is correctly ascertained. In contrast, uncertainty from incorrectly identifying productivity trends can be a major source of inaccuracy in stock status [@bergerCharacterTemporalVariability2019]. 
+Time-varying recruitment parameters affect estimates of salmon benchmarks [e.g., S~MSY~ and S~gen~, @holtImpactTimevaryingProductivity2020] and are also likely to affect population trends, resulting in changes to benchmarks based on historical observations [e.g., percentile-based benchmarks, @holtEvaluatingBenchmarksBiological2018]. Analytical methods for time-varying reference points have been proposed for other marine fish species [@amarEvaluationTwoManagement2009; @puntFisheriesManagementClimate2014], some of which have been evaluated empirically and in simulation with mixed results [@olearyComparisonMultipleApproaches2020; @bergerCharacterTemporalVariability2019]. However, determining support for time-varying parameters is not always straightforward. Common statistical diagnosis such as inspection of residuals and use of information criteria (e.g., AIC and BIC) often produce conflicting results [@holtImpactTimevaryingProductivity2020].  @bergerCharacterTemporalVariability2019 suggests that dynamic reference points that track changes in underlying population processes are most useful in situations when stock productivity shifts directionally and the productivity signal is correctly ascertained. In contrast, uncertainty from incorrectly identifying productivity trends can be a major source of inaccuracy in stock status [@bergerCharacterTemporalVariability2019]. 
 
-Further research and identifying when and how to account for time-varying parameters in assessments is required, and is currently underway within DFO. In a review of stock-recruit analyses for Pacific salmon, @adkisonReviewSalmonSpawnerRecruitment2021 highlighted that even when there is strong evidence for non-stationarity in population dynamics it is not clear if reference points should be adjusted accordingly.  Where stock depletion is associated with time-varying parameters that are thought be reversible, it may be more appropriate to protect the population from harvest by maintaining high reference points using historical data [@dfoProceedingsNationalWorkshop2013; @szuwalskiClimateChangeNonstationary2016]. @dfoHarvestStrategyCompliant2006 recommended that changes to the reference points should only be adjusted when there is considerable evidence that productivity has changed and there are no expectations that these changes will be reverted naturally or achieved through management. Furthermore, DFO's Precautionary Approach Framework states that "when developing reference points efforts should be made to take into consideration the range of factors which may affect the productivity of the stock including changes in ocean conditions, where information is available" [@dfoFisheryDecisionMakingFramework2009]. This information can help identify if reductions in productivity are likely to be irreversible or only slowly reversible. @klaerHowMuchEvidence2015 devised a framework for evaluating the degree of confidence in productivity shifts in Australian fisheries, and similar approaches could be adapted for Canadian salmon populations. 
+Although evidence for time-varying population processes is strong, guidance on incorporating these changes into assessment and management of Pacific salmon are lacking. In a review of stock-recruit analyses for Pacific salmon, @adkisonReviewSalmonSpawnerRecruitment2021 highlighted that even when there is strong evidence for non-stationarity in population dynamics it is not clear if reference points should be adjusted accordingly.  Where stock depletion is associated with time-varying parameters that are thought be reversible, it may be more appropriate to protect the population from harvest by maintaining reference points using all historical data [@dfoProceedingsNationalWorkshop2013; @szuwalskiClimateChangeNonstationary2016]. @dfoHarvestStrategyCompliant2006 recommended that changes to reference points should only occur when there is considerable evidence that productivity has changed and there are no expectations that these changes will be reverted naturally or achieved through management. Furthermore, DFO's Precautionary Approach Framework states that "when developing reference points efforts should be made to take into consideration the range of factors which may affect the productivity of the stock including changes in ocean conditions, where information is available" [@dfoFisheryDecisionMakingFramework2009]. This information can help identify if reductions in productivity are likely to be irreversible or only slowly reversible. @klaerHowMuchEvidence2015 devised a framework for evaluating the degree of confidence in productivity shifts in Australian fisheries, and similar approaches could be adapted for Canadian salmon populations. 
 
-Even if time-varying benchmarks or reference points are considered, it is difficult to define how often they should be changed [@zhangReportOceanFrontier2021]. Mistimed changes in benchmarks or reference points may lead to bias in stock status [@holtImpactTimevaryingProductivity2020] and volatility of management responses may lead to management uncertainty, reducing trust in the management process [@adkisonReviewSalmonSpawnerRecruitment2021]. Recent studies recommend the use of case-specific feedback simulation exercises in order to determine the appropriate scale to adjust reference points when stock-recruitment parameters are non-stationary [@holtImpactTimevaryingProductivity2020; @zhangAccountingNonstationaryStock2021; @olearyComparisonMultipleApproaches2020]. However, full feedback simulation studies might not be feasible for every conservation unit where trends are suspected due to limited resources. Future research should focus on identifying general advice on the best practices for adjusting benchmarks when stock dynamics are thought to be non-stationary.   
- 
+Even if time-varying benchmarks or reference points are considered, it is difficult to define how often they should be changed [@zhangReportOceanFrontier2021]. Mistimed changes in benchmarks or reference points may lead to biases in stock status [@holtImpactTimevaryingProductivity2020] and volatility of management responses may lead to management uncertainty, reducing trust in the management process [@adkisonReviewSalmonSpawnerRecruitment2021]. Recent studies recommend the use of case-specific feedback simulation exercises in order to determine the appropriate scale to adjust reference points when stock-recruitment parameters are non-stationary [@holtImpactTimevaryingProductivity2020; @zhangAccountingNonstationaryStock2021; @olearyComparisonMultipleApproaches2020]. However, full feedback simulation studies might not be feasible for every CU where trends are suspected due to limited resources. 
 
-Furthermore, research and guidance on accounting for time-varying parameters that differ among CUs within an SMU is warranted. Time-varying stock-recruitment dynamics usually occur at the CU level, and the implications for SMU-based LRPs that contain multiple CUs are not straightforward. There are no clear guidelines on how to translate time-varying stock recruitment parameters for CUs into aggregate-level LRPs. Effects of time-varying CU recruitment dynamics on aggregate abundance- and proportion-based LRPs will depend on the degree of synchrony among CUs, the direction of the change in recruitment parameters, and past and current stock status, among other factors. For example, in our case study on Interior Fraser River Coho Salmon, when consistent reductions in productivity were introduced in one sensitivity analysis (analysis that included informative priors on capacity in CU-level spawner-recruitment models), benchmarks declined for most CUs as did aggregate abundance-based LRP for the SMU. However, in cases where productivity varies at different rates among CUs or capacity changes as well, impacts on CU-level benchmarks and SMU-level LRPs will not be easily predictable. 
+Further research and identifying when and how to account for time-varying parameters in assessments and management of Pacific salmon is warranted, and is currently underway within DFO. Research and guidance on accounting for time-varying parameters that differ among CUs within an SMU is also warranted. Time-varying stock-recruitment dynamics usually occur at the CU level, and the implications for SMU-based LRPs that contain multiple CUs are not straightforward. There are no clear guidelines on how to translate time-varying stock recruitment parameters for CUs into aggregate-level LRPs. Effects of time-varying CU recruitment dynamics on aggregate abundance- and proportion-based LRPs will depend on the degree of synchrony among CUs, the direction of the change in recruitment parameters, and past and current stock status, among other factors. For example, in our case study on Interior Fraser River Coho Salmon, when consistent reductions in productivity were introduced in one sensitivity analysis (analysis that included informative priors on capacity in CU-level spawner-recruitment models), benchmarks declined for most CUs as did aggregate abundance-based LRP for the SMU. However, in cases where productivity varies at different rates among CUs or capacity changes as well, impacts on CU-level benchmarks and SMU-level LRPs will not be easily predictable. 
 
 
 ### ADAPTING LRPS TO INCLUDE A BROADER SCOPE OF SERIOUS HARM
