--- a/guidelinesWP/10-appendixCaseStudies.Rmd
+++ b/guidelinesWP/10-appendixCaseStudies.Rmd
@@ -8,7 +8,7 @@ After that, all subsequent sections will be turned into appendices. -->
 # CASE STUDIES {#app:case-studies}
 
 
-We applied candidate methods for LRPs developed in Section \@ref(est-methods) to three SMUs as case studies to demonstrate the application of candidate methods, evaluate sensitivity of LRPs to various assumptions, and inform the guidelines presented in Section \@ref(guidelines).  The case studies were Interior Fraser River Coho Salmon, West Coast Vancouver Island (WCVI) Chinook Salmon, and Inner South Coast Chum Salmon  (*Oncorhynchus keta*, excluding Fraser River CUs), each comprising of 3-7 CUs. These were chosen because they varied in data types and availabilities ranging from data-rich (Interior Fraser River Coho) to data-limited (Inner South Coast Chum), to represent a range of SMUs that may require LRPs. Furthermore, they varied in hatchery contributions from high (WCVI Chinook) to relatively low (Interior Fraser River Coho and Inside South Coast Chum). Two are included in the proposed first batch of stocks to be put under regulation for the Fish Stock provisions (Interior Fraser River Coho and WCVI Chinook). For each case study, the set of LRP methods considered is a function of available data and previously developed assessment methods for component CUs. In this section, we provide a brief description of each case study and methods applied to each. More thorough descriptions of case studies, including SMU characteristics, data sources, analysis methods, and results are available in Holt et al. (in review). <!--An overview of the approaches applied are provided in Table \@ref(tab:lrpapproaches). -->
+We illustrate the application of the candidate methods for LRPs developed in Section \@ref(est-methods) to three SMUs as case studies, evaluate sensitivity of LRPs to various assumptions, and use these applications to inform the guidelines presented in Section \@ref(guidelines). The case studies included Interior Fraser River Coho Salmon, West Coast Vancouver Island (WCVI) Chinook Salmon, and Inner South Coast Chum Salmon  (excluding Fraser River CUs), each comprising of 3-7 CUs. These were chosen because they spanned a wide range of data types and availabilities from data-rich (Interior Fraser River Coho) to data-limited (Inner South Coast Chum). Furthermore, they varied in hatchery contributions from high (WCVI Chinook) to relatively low (Interior Fraser River Coho and Inside South Coast Chum). Two of these case studies are included in the proposed first batch of stocks to be put under regulation for the Fish Stock provisions (Interior Fraser River Coho and WCVI Chinook). For each case study, the set of LRP methods considered is a function of available data and previously developed assessment methods for component CUs. In this section, we provide a brief description of each case study and methods applied to each. For more complete descriptions of case studies, including SMU characteristics, data sources, analysis methods, and results, see Holt et al. (in review). <!--An overview of the approaches applied are provided in Table \@ref(tab:lrpapproaches). -->
 
 <!--CH Kendra to use in CS WP intead of here:
 
@@ -53,13 +53,13 @@ KH: have moved
 
 ## INTERIOR FRASER RIVER COHO
 
-The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon that spawn in the Fraser River and tributaries upstream of Hells Gate in the Fraser Canyon. This SMU consists of 5 CUs: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015]. Declines in Interior Fraser Coho spawner abundance throughout the 1990’s led to a suite of management actions to promote recovery, including significant fishery restrictions starting in 1998 [@deckerAssessmentInteriorFraser2014]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundances of each subpopulation above conservation thresholds [@ifcrtConservationStrategyCoho2006]. In 2014, a peer-reviewed WSP status assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status (Lower Thompson, North Thompson) [@dfoWildSalmonPolicy2015]. As part of the WSP assessment, S~gen~ was estimated for each CU and used as one of several benchmarks considered when assigning integrated CU status.  
+The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon that spawn in the Fraser River and tributaries upstream of Hells Gate in the Fraser Canyon. This SMU consists of 5 CUs: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015]. Declines in Interior Fraser Coho spawner abundance throughout the 1990’s led to a suite of management actions to promote recovery, including significant fishery restrictions starting in 1998 [@deckerAssessmentInteriorFraser2014]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundances of each subpopulation above conservation thresholds [@ifcrtConservationStrategyCoho2006]. In 2014, a peer-reviewed WSP status assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status (Lower Thompson, North Thompson) [@dfoWildSalmonPolicy2015]. As part of the WSP assessment, S~gen~ was estimated for each CU and used as one of several benchmarks considered when determining integrated CU status.  
 
-We used data on total annual spawner abundances, recruitment by age (from natural spawning), and hatchery-based smolt-to-adult survival rate indices covering return years 1998-2000 to derive CU-level spawner-recruitment based benchmarks. Data on natural-origin spawner abundances at each of the 11 sub-populations summed to CU level were used to assess status and trends at the CU level for proportion and logistic regression LRPs. These data, along with exploitation rates were used to parameterize the projection model for projection regression LRPs. Hatchery contribution to production was usually small in this SMU, with PNI values >0.5, and usually >0.72. Spawner abundances are positively correlated among CUs, with an average correlation of 0.56 (Figure \@ref(fig:density-cor-plot)).
+We used data on total annual spawner abundances, recruitment by age (from natural spawning), and hatchery-based smolt-to-adult survival rate indices covering return years 1998-2020 to derive CU-level spawner-recruitment based benchmarks. Data on natural-origin spawner abundances at each of the 11 sub-populations summed to CU level were used to assess status and trends at the CU level for proportion and logistic regression LRPs. These data, along with exploitation rates were used to parameterize the projection model for projection regression LRPs. Hatchery contribution to production was usually small in this SMU, with PNI values >0.5, and usually >0.72. Spawner abundances are positively correlated among CUs, with an average correlation of 0.56 (Figure \@ref(fig:density-cor-plot)).
 
 <!--CH: to do for next iteration: add rug plot for data points, and limit x-axis to 00.5=-->
 
-```{r density-cor-plot, fig.cap="Distribution of correlations in spawner abundances among CUs (or inlets for WCVI Chinook) for 3 case studies", out.width = '100%', warning=FALSE, echo=FALSE, fig.align="center"}
+```{r density-cor-plot, fig.cap="Distribution of correlations in spawner abundances among CUs (or inlets for WCVI Chinook) for the three case studies", out.width = '100%', warning=FALSE, echo=FALSE, fig.align="center"}
 download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/WCVIChinookStudy/DataOut/WCVI_Spawner_cors.csv', './data/chinook-Scors.csv',  mode="wb")
 
 download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/SCChumStudy/DataOut/chum-escapement-correlation-matrix.csv', './data/chum-Scors.csv',  mode="wb")
@@ -77,16 +77,17 @@ coho <- read.csv("data/coho-amongCUCorr-natSpawners.csv")
 df_coho <- data.frame(cor=coho$amongCUCorr, SMU="IFR Coho")
 
 df <- df %>% add_row(df_chum) %>% add_row(df_coho)
-ggplot(df, aes(cor, fill=SMU, colour=SMU)) + geom_density(alpha=0.1) + xlim(-1,1)
+ggplot(df, aes(cor, fill=SMU, colour=SMU)) + geom_density(alpha=0.1) + 
+  xlim(-1,1) + xlab("Pairwise Pearson correlation in spawner abundance")
 
 ```
 
 
-We characterized CU status in three ways, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ as a lower benchmark on abundance derived from spawner-recruitment relationship under the WSP, and (3) the distribution of spawning abundance relative to distributional targets developed by the IFCRT [@ifcrtConservationStrategyCoho2006]. In the second approach, we further considered two structural assumptions about the spawner-recruitment relationship based on @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020. The third approach recognizes that an adequate distribution of spawners across subpopulations may be required for long-term persistence of the SMU [@ifcrtConservationStrategyCoho2006], and that a contraction of that distribution may represent increased risk of extinction [@arbeiderInteriorFraserCoho2020]. While multidimensional approaches, such as the Pacific Salmon Status Scanner are recommended for WSP assessments [@holtIndicatorsStatusBenchmarks2009], we apply the other two approaches (2) and (3) to support the development aggregate abundance LRPs and for a point of comparison with the Salmon Scanner. Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide logistic regression and projection regression LRPs for demonstration purposes. Fisheries on Interior Fraser Coho are managed under a bilateral Canada/US management regime, detailed in Annex IV Chapter 5 of the Pacific Salmon Treaty. 
+We characterized CU status in three ways, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ as a lower benchmark on abundance derived from spawner-recruitment relationship under the WSP, and (3) the distribution of spawning abundance relative to distributional targets developed by the IFCRT [@ifcrtConservationStrategyCoho2006]. In the second approach, we further considered two structural assumptions about the spawner-recruitment relationship based on @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020, which related to the strength of density dependence. The third approach recognizes that an adequate distribution of spawners across subpopulations may be required for long-term persistence of the SMU [@ifcrtConservationStrategyCoho2006], and that a contraction of that distribution may represent increased risk of extinction [@arbeiderInteriorFraserCoho2020]. While multidimensional approaches, such as the Pacific Salmon Status Scanner are recommended for WSP assessments [@holtIndicatorsStatusBenchmarks2009], we applied the other two approaches (2) and (3) to support the development of aggregate abundance LRPs and for a point of comparison with the Salmon Scanner. Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide logistic regression and projection regression LRPs for demonstration purposes. Fisheries on Interior Fraser Coho are managed under a bilateral Canada/US management regime, detailed in Annex IV Chapter 5 of the Pacific Salmon Treaty. 
 
-For this SMU, we evaluated the sensitivity of LRPs based on aggregate abundances to data availability with a retrospective analysis by re-estimating CU-level benchmarks, CU statuses, and SMU-level LRPs each year using only the data prior to that year. We also implemented a sensitivity analysis where one or two CUs were removed from the analyses iteratively and CU-level benchmarks, CU statuses, SMU-level LRPs, and SMU-level statuses were re-estimated. We further ran sensitivity analyses on structural assumptions about stock-recruitment relationship when deriving CU-level benchmarks for all proportion and aggregate abundance-based LRP methods.
+For this SMU, we evaluated the sensitivity of LRPs based on aggregate abundances to data availability with a retrospective analysis by re-estimating CU-level benchmarks, CU statuses, and SMU-level LRPs each year using only the data prior to that year. We also implemented a sensitivity analysis where one or two CUs were removed from the analyses iteratively and CU-level benchmarks, CU statuses, SMU-level LRPs, and SMU-level statuses were re-estimated. We further ran sensitivity analyses related to structural assumptions about the stock-recruitment relationship when deriving CU-level benchmarks for all proportion and aggregate abundance-based LRP methods.
 
-We found that LRPs and resulting status were more sensitive to structural assumptions about the shape of the stock-recruitment model than to the choice of LRP methods or CU assessment approach (Pacific Salmon Status Scanner vs single-metric on spawner abundances vs. single metric on distribution) or the addition of more years or CUs of data.  However, we note that for logistic regression LRPs, the exclusion of CUs resulted in larger uncertainties in SMU-level status, though the 95% CIs of status usually overlapped with the status estimated using all the data. <!--CH: I removed all mention of status being more optimistic with fewer CUs. As we spoke about, this result is likely not generalizable for logistic regression based LRPS. -->
+We found that LRPs and resulting status were more sensitive to structural assumptions about the shape of the stock-recruitment relationship than to the choice of LRP methods or CU assessment approach (Pacific Salmon Status Scanner vs single-metric on spawner abundances vs. single metric on distribution) or the addition of more years or CUs of data.  However, we note that for logistic regression LRPs, the exclusion of CUs resulted in larger uncertainties in SMU-level status, though the 95% CIs of status usually overlapped with the status estimated using all the data. <!--CH: I removed all mention of status being more optimistic with fewer CUs. As we spoke about, this result is likely not generalizable for logistic regression based LRPS. -->
 
 For this case study, we further demonstrated the approach of averaging over structural uncertainties to provide a projection regression LRP that accounts for that uncertainty. Similar averaging is also possible for logistic regression LRPs.
 
@@ -96,26 +97,26 @@ For this case study, we further demonstrated the approach of averaging over stru
 The West Coast of Vancouver Island (WCVI) Chinook SMU consists of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 escapement indicator stocks distributed across the 7 inlets and 3 CUs. Escapement indicator stocks are those with relatively complete time-series of spawner abundances with consistent observation methodology [@riddellReview2001Chinook2002; @pacificsalmoncommissionPacificSalmonCommission2018]. Hatchery enhancement is an substantial component of many of these stocks, however, only escapement indicator stocks without significant hatchery enhancement (PNI $\geqslant$ 0.5) were included in our analyses.  Because times-series of the proportion of hatchery-origin spawners are not available for these stocks, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses, which may results in overly optimistic assessments of status relative to if hatchery-origin fish were excluded (as in Interior Fraser River Coho case study). Spawner abundances tend to be positively correlated among inlets, with an average correlation of 0.28 (Figure \@ref(fig:density-cor-plot)).
 
 
-Under the WSP, CUs are identified at a spatial scale to conserve for long-term sustainability of the species [@holtbyConservationUnitsPacific2007]. For WCVI Chinook, inlets nested within CUs are important spatial scale of diversity for sustainability given geographic separation of spawning habitats among inlets and limited straying among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). We considered spawner abundances at the scale of inlets within CUs because of limited demographic exchange between these locations.
+For WCVI Chinook, inlets nested within CUs are considered an important spatial scale of diversity given geographic separation of spawning habitats among inlets and limited straying among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). We therefore considered spawner abundances at the scale of inlets within CUs because of limited demographic exchange between these locations.
 
 
-Two of the 3 CUs in this SMU, WCVI-South and WCVI-Nootka & Kyuquot, were assessed as Red status in an integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016].  WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan, IFMP and a rebuilding plan is under development [@dfoIntegratedFisheriesManagement2021]. Poor smolt-to-age-2 survival rates for WCVI Chinook and low spawner levels over the past 2 decades are highlighted as reasons for conservation concern in the IFMP [@dfoIntegratedFisheriesManagement2021, p. 129]. 
+Two of the three CUs in this SMU, WCVI-South and WCVI-Nootka & Kyuquot, were assessed as Red status in a recent integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016].  WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan, IFMP and a rebuilding plan is under development [@dfoIntegratedFisheriesManagement2021]. Poor smolt-to-age-2 survival for WCVI Chinook and low spawner levels over the past two decades have been highlighted as reasons for conservation concern in the IFMP [@dfoIntegratedFisheriesManagement2021, p. 129]. 
 
-Biological benchmarks have been estimated for WCVI indicator stocks using an empirical relationship between watershed area and common stock-recruitment biological benchmarks, spawner abundances at replacement, S~REP~, and S~MSY~, from a meta-analysis of 25 Chinook stocks across North America [@parkenHabitatbasedMethodsEstimate2006]. Lack of rigorous recruitment data for WCVI Chinook stocks precludes the use of stock-recruitment based benchmarks. For the development of LRPs for WCVI Chinook, the empirical relationship between watershed area and S~REP~ was re-estimated using a hierarchical Bayesian model [as in @liermannUsingAccessibleWatershed2010], and applied to inlets of WCVI Chinook. 
+Biological benchmarks have been estimated for WCVI indicator stocks using an empirical relationship between watershed area and two stock-recruitment biological benchmarks, spawner abundances at replacement, S~REP~, and S~MSY~, based on a meta-analysis of 25 Chinook stocks across North America [@parkenHabitatbasedMethodsEstimate2006]. Lack of rigorous recruitment data for WCVI Chinook stocks precludes the use of stock-recruitment based benchmarks. For the development of LRPs for WCVI Chinook, the empirical relationship between watershed area and S~REP~ was re-estimated using a hierarchical Bayesian model [as in @liermannUsingAccessibleWatershed2010], and applied to WCVI Chinook inlets. 
 
-We characterized CU status in two ways for this case study, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ derived from watershed-area model estimates of S~REP~ and productivity derived from a life-stage specific survival model with expert opinion. We calculated two types of LRPs: proportional LRPs and projection regression LRPs. Based on CU-level assessments, there were no years in historical data where all CUs were above the Red zone, so it was not possible to identify logistic regression LRPs.  Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide projection regression LRPs for demonstration purposes. Fisheries are managed based a combination of the bilateral Canada-US management regime specified under the Pacific Salmon Treaty and local co-governance. We implemented sensitivity analyses on projection regression LRPs to two key uncertainties, variability in exploitation among inlets and intrinsic productivity. Further analyses exploring impacts of exploitation, variability in productivity, and capacity are provided in an Appendix to Holt et al. in (review).
+We characterized CU status in two ways for this case study, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ derived from watershed-area model estimates of S~REP~ and productivity derived from a life-stage specific survival model with expert opinion. We calculated two types of LRPs: proportional LRPs and projection regression LRPs. Based on CU-level assessments, there were no years in historical data where all CUs were above the Red zone, so it was not possible to identify logistic regression LRPs.  Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide projection regression LRPs for illustrative purposes. Fisheries are managed based a combination of the bilateral Canada-US management regime specified under the Pacific Salmon Treaty and local co-governance. We implemented sensitivity analyses on projection regression LRPs across two key uncertainties, variability in exploitation among inlets and intrinsic productivity. Further analyses exploring impacts of exploitation, variability in intrinsic productivity, and capacity are provided in Appendix D of Holt et al. in (review).
 
-In this case study, we found that status was consistent across the LRP methods that were available, and with a previously published assessment. However, projection regression LRPs were also highly sensitive to underlying population productivities. Although the base-case LRP assumes a relatively diffuse distribution of productivities aligned with the range of expert opinion, declines (by 25%) or increases (by 50%) from this value resulted in large changes in LRPs estimates. 
+We found that status was consistent across the LRP methods that were available, and with a previously published assessment. However, projection regression LRPs were highly sensitive to underlying population productivities. Although the base-case LRP assumes a relatively diffuse distribution of productivities aligned with the range of expert opinion, declines (by 25%) or increases (by 50%) in the distribution of productivities among inlets resulted in large changes in LRPs estimates. 
 
 
 ## INSIDE SOUTH COAST CHUM - NON-FRASER
 
-The Inside South Coast Chum - Non-Fraser SMU (hereafter ISC Chum) includes seven CUs of chum salmon from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island. Chum salmon CUs spawning in the Fraser River watershed are excluded from this SMU. They have been categorized as a separate Inside South Coast Chum - Fraser SMU. While these two SMUs have substantial overlap in ocean fisheries, they have been separated into two SMUs based on differences in terminal fishery impacts and freshwater habitats. @godboutStockStatusWild2004 identified variable but stable status in the central and southern portion of the SMU, with declines in the north, especially in the region defined by Southern Coastal Streams CU. @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional assessment of status.  Spawner abundances tend to be only very weakly correlated among CUs for this SMU, with an average correlation of 0.12 (Figure \@ref(fig:density-cor-plot)). 
+The Inside South Coast Chum - Non-Fraser SMU (hereafter ISC Chum) includes seven CUs of chum salmon from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island. Chum salmon CUs spawning in the Fraser River watershed are excluded from this SMU. They have been categorized as a separate Inside South Coast Chum - Fraser SMU. While these two SMUs have substantial overlap in ocean fisheries, they have been separated into two SMUs based on differences in terminal fisheries and freshwater habitats. @godboutStockStatusWild2004 identified variable but stable status in the central and southern portion of the SMU, with declines in the north, especially in the region defined by the Southern Coastal Streams CU. @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional assessment of status.  Spawner abundances tend to be only very weakly correlated among CUs for this SMU, with an average correlation of 0.12 (Figure \@ref(fig:density-cor-plot)). 
 
-The ISC Chum SMU is considered data-limited. While escapement series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions. The quality of recruitment data is not sufficient to reliably estimate parameters from stock-recruit relationships and use those estimates as benchmarks. Instead, benchmarks were calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks) to inform WSP status, as recommended by @holtEvaluatingBenchmarksBiological2018. We removed three hatchery-dominated systems from the Georgia Strait CU (PNI <<0.5). The remaining systems had little or no hatchery enhancement (PNI likely >0.72)<!-- LW: definitely want to check with Pieter Van Will on this and skim that report from SEP-->. Where available, hatchery-origin spawners were removed from total spawner abundances. <!--CH: I revised this to better match the ISC chum chapter, after discussion with Luke on Dec. 15-->
+The ISC Chum SMU is considered data-limited. While escapement time series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions. The quality of recruitment data is not sufficient to reliably estimate parameters from stock-recruit relationships and use those estimates as benchmarks. Instead, benchmarks were calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks) to inform WSP status, as recommended by @holtEvaluatingBenchmarksBiological2018. We removed three hatchery-dominated systems from the Georgia Strait CU (PNI <<0.5). The remaining systems had little or no hatchery enhancement (PNI likely >0.72)<!-- LW: definitely want to check with Pieter Van Will on this and skim that report from SEP-->. Where available, hatchery-origin spawners were removed from total spawner abundances. <!--CH: I revised this to better match the ISC chum chapter, after discussion with Luke on Dec. 15-->
 
 For this case study, we consider two approaches for characterizing CU status: (1) the Pacific Salmon Status Scanner and (2) a single-metric on spawner abundances using percentile-based benchmarks. We applied both the proportional LRP and logistic-regression based LRPs to this case study and evaluated the sensitivity of SMU-level status from proportional LRPs to various data inputs. Because of poor fit of the logistic regression as shown by model diagnostics, were we not able to generate reliable logistic regression LRPs for this SMU.
 
 
-We found that assessments based on the Pacific Salmon Status Scanner gave identical results as the single-metric on spawner abundances relative to percentile-based benchmarks. Also, as for Interior Fraser River Coho, increasing the number of CUs included in analyses resulted in more pessimistic statuses relative to the LRP, never more optimistic. Further, the case study demonstrates that SMU status can be below the LRP even if the aggregate abundances are increasing. More details are provided in Holt et al. (In review).
+We found that assessments based on the Pacific Salmon Status Scanner gave identical results as the single-metric on spawner abundances relative to percentile-based benchmarks. Also, as for Interior Fraser River Coho, increasing the number of CUs included in analyses always resulted in more pessimistic statuses relative to the LRP. 
 
